[gd_scene load_steps=38 format=3 uid="uid://dcu4fdabbv2gx"]

[ext_resource type="Script" path="res://drawCurve.gd" id="1_l0nr8"]
[ext_resource type="Script" path="res://StaticObjects.gd" id="2_dlj3h"]
[ext_resource type="PackedScene" uid="uid://drdrwvirfo48f" path="res://objects/bush.tscn" id="3_w5jwq"]
[ext_resource type="PackedScene" uid="uid://c7t2jpwepcix" path="res://objects/log1.tscn" id="4_jg1pg"]
[ext_resource type="PackedScene" uid="uid://dpubxgbptpg4m" path="res://objects/log2.tscn" id="5_mlv06"]
[ext_resource type="PackedScene" uid="uid://unmus0ceed5q" path="res://objects/log3.tscn" id="6_icnqj"]
[ext_resource type="PackedScene" uid="uid://cce0afbqa2gsr" path="res://objects/rock1.tscn" id="7_ku830"]
[ext_resource type="PackedScene" uid="uid://wd0lyq2nupf5" path="res://objects/rock2.tscn" id="8_ok7on"]
[ext_resource type="PackedScene" uid="uid://dephrk2wl2d11" path="res://objects/table.tscn" id="9_1g167"]
[ext_resource type="PackedScene" uid="uid://b340lbrlkv1q6" path="res://objects/tardis.tscn" id="10_pnj43"]
[ext_resource type="PackedScene" uid="uid://dw1b2jt8hpyle" path="res://objects/toilet1.tscn" id="11_8sv34"]
[ext_resource type="PackedScene" uid="uid://dnraqjsmfygt0" path="res://objects/tree1.tscn" id="12_vccdc"]
[ext_resource type="PackedScene" uid="uid://upa8i6abhu11" path="res://objects/tree2.tscn" id="13_inhw5"]
[ext_resource type="PackedScene" uid="uid://ce4n7ao7qmxr" path="res://objects/tree3.tscn" id="14_hn5dx"]
[ext_resource type="PackedScene" uid="uid://d1e0nwda1hdbe" path="res://objects/tree4.tscn" id="15_iecrn"]
[ext_resource type="PackedScene" uid="uid://6lyc3d3spd1p" path="res://objects/water_station.tscn" id="16_fur6k"]
[ext_resource type="Script" path="res://SpawnPath.gd" id="17_7xfir"]
[ext_resource type="PackedScene" uid="uid://naombmq55b7i" path="res://enemy.tscn" id="18_hopwh"]
[ext_resource type="PackedScene" uid="uid://dkedg3rpu0n6m" path="res://tents/tent1.tscn" id="19_e6xwp"]
[ext_resource type="PackedScene" uid="uid://baveohy1c7wdb" path="res://gate.tscn" id="19_fee1c"]
[ext_resource type="Script" path="res://entry.gd" id="19_qromv"]
[ext_resource type="PackedScene" uid="uid://cgbx1ko4uon3v" path="res://tents/tent2.tscn" id="20_bcymx"]
[ext_resource type="PackedScene" uid="uid://s6tq18yecxab" path="res://tents/tent3.tscn" id="21_6sc28"]
[ext_resource type="PackedScene" uid="uid://dh4garsampahr" path="res://tents/tent4.tscn" id="22_mcaeu"]
[ext_resource type="PackedScene" uid="uid://bx1wjefskthba" path="res://trash.tscn" id="23_k8ojw"]
[ext_resource type="PackedScene" uid="uid://cjtwspe1camh8" path="res://player.tscn" id="26_lsojf"]
[ext_resource type="Script" path="res://labelCounter.gd" id="27_5irfa"]
[ext_resource type="Texture2D" uid="uid://cwfek0bwmrwvx" path="res://graphics/obstacles.svg" id="28_4hb78"]
[ext_resource type="Texture2D" uid="uid://ddjy2wsia8xyl" path="res://graphics/infra.svg" id="29_qxsy8"]

[sub_resource type="Curve2D" id="Curve2D_c78jt"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 205, -52, 46.2493, -27.7496, -46.2493, 27.7496, 191, 23, -1.68179, -66.4308, 1.68179, 66.4308, 25, 57, -57.9563, -35.2778, 57.9563, 35.2778, 62, 173, 0, 0, 0, 0, 121, 200)
}
point_count = 5

[sub_resource type="Curve2D" id="Curve2D_ojt80"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 113, 198, -38, -41, 38, 41, 308, 294, -14.5257, -8.98974, 14.5257, 8.98974, 315, 482, -58, 75, 58, -75, 591, 338, -12.2704, -48.1376, 12.2704, 48.1376, 884, 487, 0, 0, 0, 0, 879, 565)
}
point_count = 6

[sub_resource type="Curve2D" id="Curve2D_cl3da"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 114, 197, -52.9167, -17.6389, 52.9167, 17.6389, 348, 303, -65.5159, 27.7182, 65.5159, -27.7182, 487, 252, 0, 0, 0, 0, 585, 130)
}
point_count = 4

[sub_resource type="Curve2D" id="Curve2D_3dg0m"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 114, 199, -47.877, -15.119, 47.877, 15.119, 329, 294, -74.3353, 42.8373, 74.3353, -42.8373, 436, 282, -99.5337, 10.0794, 99.5337, -10.0794, 620, 217, -76.4538, -67.9589, 76.4538, 67.9589, 896, 243, 0, 0, 0, 0, 865, 461)
}
point_count = 6

[sub_resource type="Curve2D" id="Curve2D_nc5lj"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 114, 196, -54.7447, -20.7652, 54.7447, 20.7652, 291, 276, 0, 0, 0, 0, 303, 490, 0, 0, 0, 0, 274, 559)
}
point_count = 4

[sub_resource type="CircleShape2D" id="CircleShape2D_gi28g"]
radius = 21.2

[sub_resource type="CircleShape2D" id="CircleShape2D_bltb0"]
radius = 30.0

[sub_resource type="LabelSettings" id="LabelSettings_51n5x"]
font_size = 32

[node name="Main" type="Node2D"]

[node name="GroundPoly" type="Polygon2D" parent="."]
color = Color(0.431373, 0.662745, 0.196078, 1)
polygon = PackedVector2Array(155, 66, 74, 318, 162, 518, 420, 619, 642, 456, 982, 616, 1065, 359, 927, 183, 755, 43, 516, 131)

[node name="GroundOffsetPoly" type="Polygon2D" parent="."]
color = Color(0.278431, 0.388235, 0.156863, 1)
polygon = PackedVector2Array(75, 318, 75, 376, 163, 567, 419, 662, 643, 493, 983, 654, 1063, 406, 1064, 358, 982, 614, 642, 454, 419, 619, 163, 516)

[node name="SpawnPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_c78jt")
script = ExtResource("17_7xfir")
enemyScene = ExtResource("18_hopwh")

[node name="Timer" type="Timer" parent="SpawnPath"]
wait_time = 5.0
autostart = true

[node name="Line2D" type="Line2D" parent="SpawnPath"]
points = PackedVector2Array(205, -52, 206.295, -49.9155, 209.316, -44.1835, 212.765, -35.5863, 214.244, -30.4577, 215.343, -24.9061, 215.901, -19.0293, 215.754, -12.9251, 215.366, -9.81829, 214.741, -6.69128, 213.859, -3.55631, 212.699, -0.425605, 211.242, 2.68862, 209.466, 5.77414, 207.352, 8.81874, 204.88, 11.8102, 202.029, 14.7362, 198.779, 17.5847, 195.109, 20.3434, 191, 23, 186.45, 25.3505, 181.496, 27.225, 176.173, 28.6629, 170.52, 29.7034, 158.362, 30.7495, 145.315, 30.6775, 90.0258, 25.4945, 64.5897, 24.3657, 53.4404, 25.267, 48.385, 26.2215, 43.7242, 27.5643, 39.4943, 29.3347, 37.5522, 30.3925, 35.7316, 31.572, 34.0368, 32.878, 32.4724, 34.3154, 31.0429, 35.8892, 29.753, 37.6043, 28.6071, 39.4656, 27.6098, 41.4779, 26.7656, 43.6463, 26.079, 45.9756, 25.5546, 48.4707, 25.197, 51.1365, 25, 57, 22.1647, 113.595, 22.028, 120.375, 22.3971, 126.682, 23.4256, 132.625, 24.2352, 135.493, 25.2673, 138.31, 26.5411, 141.089, 28.0759, 143.844, 29.8907, 146.588, 32.0049, 149.334, 37.2082, 154.888, 43.8393, 160.612, 62, 173, 95.6691, 192.102, 106.137, 197.046, 113.234, 199.729, 115.722, 200.413, 117.613, 200.759, 118.361, 200.829, 118.989, 200.843, 119.509, 200.811, 119.931, 200.742, 120.265, 200.646, 120.403, 200.59, 120.522, 200.531, 120.624, 200.47, 120.71, 200.409, 120.783, 200.347, 120.842, 200.287, 120.889, 200.229, 120.926, 200.176, 120.954, 200.127, 120.974, 200.084, 120.987, 200.049, 120.995, 200.023, 121, 200)
width = 30.0
default_color = Color(0.72549, 0.72549, 0.72549, 1)
script = ExtResource("1_l0nr8")

[node name="Paths" type="Node2D" parent="."]

[node name="Path2D" type="Path2D" parent="Paths"]
curve = SubResource("Curve2D_ojt80")

[node name="Line2D" type="Line2D" parent="Paths/Path2D"]
points = PackedVector2Array(113, 198, 196.25, 230.625, 261.5, 261.703, 288.711, 278.104, 299.548, 286.165, 308, 294, 311.322, 298.121, 314.181, 302.769, 316.603, 307.903, 318.615, 313.481, 321.512, 325.804, 323.082, 339.408, 323.084, 369.132, 320.303, 400.004, 313.122, 454.598, 312.216, 464.826, 312.087, 473.022, 312.38, 476.256, 312.627, 477.638, 312.945, 478.858, 313.338, 479.909, 313.81, 480.786, 314.363, 481.485, 315, 482, 315.818, 482.358, 316.905, 482.591, 318.254, 482.7, 319.856, 482.688, 323.792, 482.309, 328.651, 481.47, 356.097, 473.839, 436.697, 441.496, 525.449, 393.405, 563.084, 366.089, 578.502, 352.076, 591, 338, 593.838, 334.667, 596.909, 331.692, 600.203, 329.068, 603.714, 326.785, 607.431, 324.835, 611.347, 323.209, 615.452, 321.898, 619.739, 320.895, 628.821, 319.773, 638.526, 319.775, 648.783, 320.831, 659.524, 322.871, 682.186, 329.629, 705.96, 339.493, 754.649, 366.323, 801.194, 398.926, 841.198, 432.864, 857.374, 448.947, 870.266, 463.701, 879.325, 476.57, 882.245, 482.124, 883.272, 484.651, 884, 487, 887.308, 504.172, 888.395, 519.496, 887.81, 532.834, 886.101, 544.052, 883.817, 553.013, 881.507, 559.582, 879, 565)
width = 30.0
default_color = Color(0.690196, 0.831373, 0.235294, 1)
script = ExtResource("1_l0nr8")

[node name="Path2D2" type="Path2D" parent="Paths"]
curve = SubResource("Curve2D_cl3da")

[node name="Line2D" type="Line2D" parent="Paths/Path2D2"]
points = PackedVector2Array(114, 197, 348, 303, 357.562, 305.639, 366.478, 307.01, 374.863, 307.219, 382.83, 306.371, 390.491, 304.57, 397.96, 301.923, 412.775, 294.509, 445.083, 274.143, 464.388, 262.873, 487, 252, 498.897, 246.062, 510.021, 238.8, 520.372, 230.448, 529.952, 221.244, 546.799, 201.218, 560.568, 180.606, 578.901, 145.165, 585, 130)
width = 30.0
default_color = Color(0.683594, 0.824219, 0.234375, 1)
script = ExtResource("1_l0nr8")

[node name="Path2D3" type="Path2D" parent="Paths"]
curve = SubResource("Curve2D_3dg0m")

[node name="Line2D" type="Line2D" parent="Paths/Path2D3"]
points = PackedVector2Array(114, 199, 329, 294, 355.463, 304.527, 364.295, 308.142, 368.393, 309.234, 370.461, 309.563, 372.578, 309.734, 374.773, 309.734, 377.073, 309.554, 382.101, 308.608, 387.887, 306.81, 394.654, 304.073, 436, 282, 518.551, 237.216, 537.641, 230.701, 559.713, 225.384, 620, 217, 766.655, 200.736, 801.318, 202.251, 818.156, 204.826, 834.618, 208.85, 850.668, 214.501, 866.272, 221.958, 881.395, 231.398, 896, 243, 902.638, 249.605, 908.251, 256.648, 912.894, 264.086, 916.619, 271.879, 919.479, 279.982, 921.529, 288.354, 922.822, 296.952, 923.41, 305.733, 922.688, 323.675, 919.789, 341.841, 915.141, 359.891, 909.17, 377.485, 894.967, 409.942, 880.595, 436.494, 865, 461)
width = 30.0
default_color = Color(0.6875, 0.828125, 0.234375, 1)
script = ExtResource("1_l0nr8")

[node name="Path2D4" type="Path2D" parent="Paths"]
curve = SubResource("Curve2D_nc5lj")

[node name="Line2D" type="Line2D" parent="Paths/Path2D4"]
points = PackedVector2Array(114, 196, 291, 276, 293.495, 277.098, 295.851, 278.441, 298.07, 280.019, 300.156, 281.825, 302.113, 283.85, 303.942, 286.086, 307.233, 291.157, 310.056, 296.971, 312.436, 303.46, 315.97, 318.198, 318.041, 334.835, 318.855, 352.836, 317.529, 390.787, 303, 490, 274, 559)
width = 30.0
default_color = Color(0.690196, 0.831373, 0.235294, 1)
script = ExtResource("1_l0nr8")

[node name="LevelObjects" type="Node2D" parent="."]
y_sort_enabled = true
script = ExtResource("2_dlj3h")
objects1 = Array[PackedScene]([ExtResource("12_vccdc"), ExtResource("13_inhw5"), ExtResource("14_hn5dx"), ExtResource("15_iecrn"), ExtResource("3_w5jwq")])
objects2 = Array[PackedScene]([ExtResource("4_jg1pg"), ExtResource("5_mlv06"), ExtResource("6_icnqj"), ExtResource("7_ku830"), ExtResource("8_ok7on")])
objects3 = Array[PackedScene]([ExtResource("9_1g167"), ExtResource("16_fur6k")])
objects4 = Array[PackedScene]([ExtResource("11_8sv34")])
objects5 = Array[PackedScene]([ExtResource("10_pnj43")])
tents = Array[PackedScene]([ExtResource("19_e6xwp"), ExtResource("20_bcymx"), ExtResource("21_6sc28"), ExtResource("22_mcaeu")])
trash = ExtResource("23_k8ojw")

[node name="Gate" type="Node2D" parent="LevelObjects"]
position = Vector2(151, 198)
script = ExtResource("19_qromv")
metadata/type = "gate"

[node name="GateSprite" parent="LevelObjects/Gate" instance=ExtResource("19_fee1c")]
scale = Vector2(0.271361, 0.271361)

[node name="Area2D" type="Area2D" parent="LevelObjects/Gate"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LevelObjects/Gate/Area2D"]
position = Vector2(-28, -1)
shape = SubResource("CircleShape2D_gi28g")

[node name="AreaGatehouse" type="Area2D" parent="LevelObjects/Gate"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LevelObjects/Gate/AreaGatehouse"]
position = Vector2(20, -12)
shape = SubResource("CircleShape2D_gi28g")

[node name="ClearArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ClearArea"]
position = Vector2(205, -50)
shape = SubResource("CircleShape2D_bltb0")

[node name="Player" parent="." instance=ExtResource("26_lsojf")]
position = Vector2(220, 188)

[node name="ToiletCountPanel" type="Panel" parent="."]
offset_left = 1006.0
offset_top = 11.0
offset_right = 1137.0
offset_bottom = 79.0
script = ExtResource("27_5irfa")
metaType = "toilet"

[node name="Sprite2D" type="Sprite2D" parent="ToiletCountPanel"]
position = Vector2(30, 34)
scale = Vector2(0.2, 0.2)
texture = ExtResource("28_4hb78")
region_enabled = true
region_rect = Rect2(10.4776, 409.965, 215.223, 314.782)

[node name="Label" type="Label" parent="ToiletCountPanel"]
layout_mode = 0
offset_left = 70.0
offset_top = 12.0
offset_right = 127.0
offset_bottom = 60.0
text = "x n"
label_settings = SubResource("LabelSettings_51n5x")

[node name="GateCountPanel" type="Panel" parent="."]
offset_left = 1006.0
offset_top = 93.0
offset_right = 1137.0
offset_bottom = 161.0
script = ExtResource("27_5irfa")
metaType = "gate"

[node name="Sprite2D" type="Sprite2D" parent="GateCountPanel"]
position = Vector2(30, 34)
scale = Vector2(0.2, 0.2)
texture = ExtResource("29_qxsy8")
region_enabled = true
region_rect = Rect2(24.0256, 34.8701, 299.577, 310.99)

[node name="Label" type="Label" parent="GateCountPanel"]
layout_mode = 0
offset_left = 70.0
offset_top = 12.0
offset_right = 127.0
offset_bottom = 60.0
text = "x n"
label_settings = SubResource("LabelSettings_51n5x")

[connection signal="timeout" from="SpawnPath/Timer" to="SpawnPath" method="_on_timer_timeout"]
